[tool.poetry]
name = "seto-data-backend"
version = "0.1.0"
description = ""
authors = ["CaffeineDuck <hello@samrid.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
dagster = "^1.7.5"
dagster-webserver = "^1.7.5"
httpx = "^0.27.0"
bs4 = "^0.0.2"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I001"]

[tool.dagster]
module_name = "seto-data-backend"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
